--- a/jbake.properties
+++ b/jbake.properties
@@ -1,6 +1,4 @@
-site.host=http://jbake.org
 render.tags=true
 render.sitemap=true
 render.archive=true
-template.bagevaerk=lists/bagevaerk.tlf
-template.bagevaerk.extension=html
+destination.folder=docs
