--- a/jbake.properties
+++ b/jbake.properties
@@ -1,4 +1,5 @@
 render.tags=true
-render.sitemap=true
-render.archive=true
+render.sitemap=false
+render.archive=false
+render.feed=false
 destination.folder=docs
